@@ -15,6 +15,7 @@ DEFINE_OPT(KDUMP_COMMANDLINE, String, "", KEXEC)
 DEFINE_OPT(KDUMP_COMMANDLINE_APPEND, String, "", KEXEC)
 #if HAVE_FADUMP
 DEFINE_OPT(KDUMP_FADUMP, Bool, false, MKINITRD)
+DEFINE_OPT(KDUMP_FADUMP_SHELL, Bool, false, MKINITRD | DUMP)
 #endif
 DEFINE_OPT(KEXEC_OPTIONS, String, "", KEXEC)
 DEFINE_OPT(MAKEDUMPFILE_OPTIONS, String, "", DUMP)
